--- a/3.2_flexible_approach.qmd
+++ b/3.2_flexible_approach.qmd
@@ -4,11 +4,11 @@ code-annotations: hover
 ---
 
 
-# Aborgadem flexivel
+# Abordagem flexível
 
-In the the previous section, we learned a 'quick approach' to calculate accessibility directly from within `{r5r}`. A shortcoming of this approach is that it is limited to only a few predefined accessibility metrics available in `{r5r}`. Oftentimes, we want to analyze other types of accessibility metrics and/or to have more control of the different steps of the analysis.
+Na seção anterior, nós aprendemos uma 'abordagem rápida' para calcular a acessibilidade diretamente dentro do `{r5r}`. Uma limitação dessa abordagem é que ela se restringe apenas a algumas métricas de acessibilidade predefinidas disponíveis no `{r5r}`. Frequentemente, queremos analisar outros tipos de métricas de acessibilidade e/ou ter mais controle sobre as diferentes etapas da análise.
 
-**In this section, we'll learn how to calculate travel time matrices and to use them to compute different types of accessibility metrics.** This is a more 'flexible' approach that combines the capabilities of the `{r5r}` and the `{accessibility}` packages. We'll use again the sample data for the city of Porto Alegre, Brazil, that comes with the `{r5r}` package.
+**Nesta seção, aprenderemos como calcular matrizes de tempo de viagem e usá-las para calcular diferentes tipos de métricas de acessibilidade.** Esta é uma abordagem mais 'flexível' que combina os pacotes `{r5r}` e `{accessibility}`. Usaremos novamente os dados de exemplo da cidade de Porto Alegre, Brasil, que vêm com o pacote `{r5r}`.
 
 <!-- package logos side by side  -->
 <div style="text-align: center">
@@ -16,13 +16,13 @@ In the the previous section, we learned a 'quick approach' to calculate accessib
 </div>
 
 
-This flexible approach to calculate accessibility only involves 3 steps:
+Esta abordagem flexível para calcular a acessibilidade envolve apenas 3 etapas:
 
-1. Building a routable transport network
-2. Computing a travel time matrix
-3. Calculating accessibility
+1. Construir uma rede de transporte roteável  
+2. Calcular uma matriz de tempo de viagem  
+3. Calcular a acessibilidade  
 
-Now let's start loading the packages we need:
+Agora vamos começar carregando os pacotes necessários:
 
 ```{r, message=FALSE}
 # allocating memory to java
@@ -37,9 +37,9 @@ library(ggplot2)
 ```
 
 
-## Building a routable transport network
+## Construindo uma rede de transporte roteável
 
-First, we build the multimodal transport network by passing the path of our data directory to the `r5r::setup_r5()` function.
+Primeiro, construímos a rede de transporte multimodal passando o caminho da nossa pasta com de dados para a função `r5r::setup_r5()`.
 
 ```{r, message=FALSE}
 # path to data directory
@@ -51,11 +51,11 @@ r5r_core <- r5r::setup_r5(data_path,
 
 ```
 
-## Computing a travel time matrix
+## Calculando uma matriz de tempo de viagem
 
-The second step is to calculate a travel time matrix with door-to-door travel time estimates from all origins to all destinations. To do this, we use the `r5r::travel_time_matrix()` function.
+A segunda etapa é calcular uma matriz de tempo de viagem com estimativas de porta-a-porta de todas as origens para todos os destinos. Para isso, usamos a função `r5r::travel_time_matrix()`.
 
-As basic inputs, this function receives the routable network created above, origin and destination points as `data.frames` with columns `id`, `lon` and `lat`, the transportation mode and the departure time.
+Essa função recebe como input a rede roteável criada acima, pontos de origem e destino como `data.frames` com colunas `id`, `lon` e `lat`, o modo de transporte e o horário de partida.
 
 ```{r}
 # read points data
@@ -78,16 +78,14 @@ ttm <- r5r::travel_time_matrix(
   progress = TRUE
   )
 ```
-1. In minutes
-
+1. Em minutos
 
 ::: {.callout-tip}
-## Tip
-Note that the `r5r::travel_time_matrix()` includes several additional parameters that allow you to specify some trip characteristics, such as maximum walking time, a departure time window, the maximum number of public transport legs allowed, etc. For more info, check the documentation of the function by calling `?r5r::travel_time_matrix` in your R Console or check the documentation on [{r5r} website](https://ipeagit.github.io/r5r/reference/travel_time_matrix.html).
+## Dica
+Observe que a função `r5r::travel_time_matrix()` inclui vários parâmetros adicionais que permitem especificar algumas características da viagem, como tempo máximo de caminhada, uma janela de horário de partida, o número máximo de trechos de transporte público permitidos, etc. Para mais informações, consulte a documentação da função chamando `?r5r::travel_time_matrix` no Console no R ou acesse a documentação no [site do {r5r}](https://ipeagit.github.io/r5r/reference/travel_time_matrix.html).
 :::
 
-The output is a `data.frame`, which looks like this. It is a matrix in long format with the columns `from_id`, `to_id` and a third column indicating the travel time (in minutes) for each origin-destination pair.
-
+O output é um `data.frame`, com essa cara abaixo. É uma matriz em formato longo com as colunas `from_id`, `to_id` e uma terceira coluna indicando o tempo de viagem (em minutos) para cada par de origem e destino.
 
 ```{r}
 head(ttm)
@@ -95,9 +93,9 @@ head(ttm)
 
 
 ::: {.callout-note appearance="simple"}
-## Processing speed
+## Velocidade de processamento
 
-The `travel_time_matrix()` function uses an extension of the RAPTOR routing algorithm [@conway2017evidencebased], making R5 extremely fast. Depending on the number of origin-destination pairs, `{r5r}` can calculate travel time matrices between 6 and 200 times faster than other multimodal routing engines [@higgins2022calculating].
+A função `travel_time_matrix()` utiliza uma extensão do algoritmo de roteamento RAPTOR [@conway2017evidencebased], o que torna o R5 extremamente rápido. Dependendo do número de pares de origem e destino, o `{r5r}` pode calcular matrizes de tempo de viagem entre 6 e 200 vezes mais rápido do que outros programas de roteamento multimodal [@higgins2022calculating].
 :::
 
 
@@ -105,37 +103,37 @@ The `travel_time_matrix()` function uses an extension of the RAPTOR routing algo
 
 <img align="right" src="/images/accessibility_logo.png" alt="logo" width="140"> 
 
-Having computed a travel time matrix, we can combine it with land use data to calculate accessibility. For this, we will use the `{accessibility}` package, which provides some fast and convenient functions to calculate several accessibility measures. 
+Depois de calcular uma matriz de tempo de viagem, podemos combiná-la com dados de uso do solo para calcular a acessibilidade. Para isso, usaremos o pacote `{accessibility}`, que oferece funções rápidas e convenientes para calcular várias medidas de acessibilidade.
 
-The package currently includes more than 7 different types of accessibility measures (see details in the package [documentation website](https://ipeagit.github.io/accessibility/reference/cost_to_closest.html)).
+O pacote atualmente inclui mais de 7 tipos diferentes de medidas de acessibilidade (veja os detalhes no [site de documentação do pacote](https://ipeagit.github.io/accessibility/reference/cost_to_closest.html)).
 
-- `cost_to_closest()`: Minimum travel cost to closest N number of opportunities
-- `cumulative_cutoff()`: Cumulative access based on a travel cost *cutoff*
-- `cumulative_interval()`: Cumulative access based on a travel time *interval*
-- `gravity()`: Gravity-based accessibility measures
-- `floating_catchment_area()`: Floating catchment area accessibility
-- `spatial_availability()`: Spatial availability
-- `balancing_cost()`: Balancing cost accessibility measure
+- `cost_to_closest()`: Custo mínimo de viagem até as N oportunidades mais próximas
+- `cumulative_cutoff()`: Acesso cumulativo com base em um *limite* de tempo de viagem
+- `cumulative_interval()`: Acesso cumulativo com base em um *intervalo* de tempo de viagem
+- `gravity()`: Medidas de acessibilidade gravitacioinais
+- `floating_catchment_area()`: Área de captação flutuante
+- `spatial_availability()`: Disponibilidade espacial
+- `balancing_cost()`: Medida de acessibilidade de custo de balanceamento
 
-As basic inputs, all functions of the package require a pre-calculated cost matrix (in our case, a travel time matrix) and some land use data with the number of opportunities (e.g. schools, jobs) in each cell of the study area. Both inputs must be organized in a `data.frame` format. We have just seen above the structure of the travel matrix. The land use `data.frame` must be organized like this:
+Todas as funções do pacote recebem como input (a) uma matriz de custos pré-calculada - no nosso caso, uma matriz de tempo de viagem, e (b) alguns dados de uso do solo com o número de oportunidades (por exemplo, escolas, empregos) em cada célula da área de estudo. Ambos os dados devem estar organizados no formato `data.frame`. Vimos acima a estrutura da matriz de viagem. O `data.frame` de uso do solo deve estar organizado assim:
+
 
 ```{r}
 # land use data
 head(points)                # <1>
 ```
-1. The land use data must contain an `id` column, referring to the ids listed in the travel matrix, and the number of opportunities in each location.
+1. Os dados de uso do solo devem conter uma coluna `id`, referindo-se aos ids listados na matriz de viagem, e o número de oportunidades em cada local.
+
+Agora vamos calcular alguns indicadores de acessibilidade.
 
 
-Now let's calculate a few accessibility indicators.
+### Medida de acessibilidade cumulativa
 
+#### Acessibilidade cumulativa baseada em limite de tempo
 
-### Cumulative accessibility measure
+Para calcular uma medida tradicional de acessibilidade cumulativa, podemos usar a função `accessibility::cumulative_cutoff()`. Junto com a matriz de viagem e os conjuntos de dados de uso do solo, precisamos apenas passar o nome da coluna com os valores de tempo de viagem, o nome da coluna com a contagem de oportunidades e um limite de tempo de viagem.
 
-#### Threshold-based cumulative accessibility
-
-To calculate a traditional cumulative accessibility measure, we can use the `accessibility::cumulative_cutoff()` function. Along with the travel matrix and land use data sets, we only need to pass the name of the column with the travel time values, the name of the column with the count of opportunities, and a travel time cutoff. 
-
-Here, we calculate the number of schools accessible in 20 minutes.
+Aqui, calculamos o número de escolas acessíveis em 20 minutos.
 
 ```{r}
 # threshold-based cumulative accessibility
@@ -150,13 +148,13 @@ access_cum_t <- accessibility::cumulative_cutoff(
 head(access_cum_t)
 
 ```
-#### Interval-based cumulative accessibility
+### Acessibilidade cumulativa baseada em intervalo de tempo
 
-Previous studies have shown that the *ad-hoc* choice of a single travel time threshold can substantially influence the results of traditional cumulative accessibility measures, introducing bias into transport project evaluations and equity analyses [@pereira2019future]. To overcome this issue, we have proposed a *time interval* cumulative accessibility measure [@tomasiello2023time]. This new metric estimates the average (or the median) number of opportunities that can be reached considering multiple minute-by-minute cutoffs within a given travel time interval. 
+Estudos anteriores mostraram que a escolha *ad hoc* de um único limite de tempo de viagem pode influenciar substancialmente os resultados das medidas tradicionais de acessibilidade cumulativa, introduzindo viés nas avaliações de projetos de transporte e análises de equidade [@pereira2019future]. Para superar esse problema, propusemos uma medida de acessibilidade cumulativa com *intervalo de tempo* [@tomasiello2023time]. Essa nova métrica estima o número médio (ou mediano) de oportunidades que podem ser alcançadas considerando múltiplos limites minuto a minuto dentro de um intervalo de tempo de viagem.
 
-The main advantage of this metric is that it mitigates the impacts of arbitrary choices of trip duration on accessibility analysis while preserving the computation and communicability advantages of threshold-based cumulative measures. 
+A principal vantagem dessa métrica é que ela mitiga os impactos de escolhas arbitrárias de duração de viagem na análise de acessibilidade, enquanto preserva as vantagens de cálculo e comunicabilidade das medidas cumulativas baseadas em limites.
 
-Here, we calculate the average number of schools that can be reached between 20 and 30 minutes.
+Aqui, calculamos o número médio de escolas que podem ser alcançadas entre 15 e 25 minutos.
 
 ```{r}
 # interval-based cumulative accessibility
@@ -165,7 +163,7 @@ access_cum_i <- accessibility::cumulative_interval(
   land_use_data = points,
   travel_cost = 'travel_time_p50',
   opportunity = 'schools',
-  interval = c(15,25),
+  interval = c(15, 25),
   summary_function = mean
   )
   
@@ -176,19 +174,19 @@ head(access_cum_i)
 
 <!-- 
 ::: {.callout-tip}
-## Active Vs Passive accessibility
+## Acessibilidade Ativa vs Passiva
 
-By default, most functions of `{accessibility}` calculate *active* accessibility, i.e. some weighted count of opportunities that can be reached when *departing* from a given location. By setting the parater `active = FALSE`, you can calculate the catchment area (aka passive accessibility) of a given location, i.e. the number of people that could *arrive*.....
+Por padrão, a maioria das funções do `{accessibility}` calcula a acessibilidade *ativa*, ou seja, uma contagem ponderada de oportunidades que podem ser alcançadas ao *sair* de um determinado local. Ao definir o parâmetro `active = FALSE`, você pode calcular a área de captação (também conhecida como acessibilidade passiva) de um determinado local, ou seja, o número de pessoas que poderiam *chegar*...
 :::
  -->
 
 
 
-### Gravity-based accessibility measures
+### Medidas de acessibilidade baseadas em gravidade
 
-The package also includes `accessibility::gravity()` to calculate gravity-based accessibility metrics in a very flexible way.
+O pacote também inclui a função `accessibility::gravity()` para calcular métricas de acessibilidade baseadas em gravidade de forma muito flexível.
 
-It includes a `decay_function` parameter that can receive any *function* to convert travel cost into an impedance factor used to weight opportunities. For convenience, the package currently includes the following functions:
+Ela possui um parâmetro `decay_function` que pode receber qualquer *função* para converter o custo de viagem em um fator de impedância usado para ponderar as oportunidades. Para conveniência, o pacote atualmente inclui as seguintes funções:
 
 - `decay_binary()`
 - `decay_exponential()`
@@ -197,7 +195,7 @@ It includes a `decay_function` parameter that can receive any *function* to conv
 - `decay_power()`
 - `decay_stepped()`
 
-Let's see a couple examples with logistic and negative exponential decay functions:
+Vamos ver alguns exemplos com as funções de decaimento logístico e exponencial negativo:
 
 ```{r}
 # logistic decay
@@ -220,7 +218,7 @@ access_nexp <- gravity(
 
 ```
 
-Here's a quick visualization of the shape of the decay curves we've used.
+Aqui está uma rápida visualização da forma das curvas de decaimento que utilizamos.
 
 ```{r}
 #| code-fold: true
@@ -252,9 +250,9 @@ ggplot(weights) +
   theme_minimal()
 ```
 
-## Accessibility map
+## Mapa de Acessibilidade
 
-Now it is super simple to merge all of these accessibility estimates to our spatial grid to visualize these results on a map.
+Agora é muito simples unir todas essas estimativas de acessibilidade à nossa grade espacial para visualizar esses resultados em um mapa.
 
 ```{r}
 # rbind all accessibility results in a single data.frame
@@ -285,13 +283,13 @@ access_sf <- left_join(
 ```
 
 
-Plot map
+Gerar mapa com visualização espacial dos resultados
 
 ```{r}
 ggplot() +
   geom_sf(data = access_sf, aes(fill = schools), color= NA) +
   scale_fill_viridis_c(direction = -1, option = 'B') +
-  labs(title = "Access to schools by public transport using different accessibility metrics", fill = "Access\nscore") +
+  labs(title = "Acesso a escolas por transporte público usando diferentes métricas de acessibilidade", fill = "Índice de\nacessibilidade") +
   theme_minimal() +
   theme(axis.title = element_blank()) +
   facet_wrap(~metric) +
@@ -302,14 +300,14 @@ ggplot() +
 
 
 ::: {.callout-tip appearance="simple"}
-The `{r5r}` package has several advanced capabilities:
+O pacote `{r5r}` possui várias funcionalidades avançadas:
 
-- Accounting for monetary costs
-- Accounting for Level of Traffic Stress (LTS)
-- Using a departure window period instead of an exact departure time
-- Trip planning with detailed ouputs
-- Calculating isochrones
-- Generating larger-than-memory outputs
+- Consideração de custos monetários
+- Consideração Nível de tolerância ao Estresse do Tráfego (LTS)
+- Uso de uma janela de partida em vez de um horário exato
+- Planejamento de viagens com output detalhado
+- Cálculo de isócronas
+- Geração de outputs que não cabem na memória RAM
 
-See the [package vignettes on the website fore more info](https://ipeagit.github.io/r5r/index.html).
+Consulte as [vignettes do pacote no site para mais informações](https://ipeagit.github.io/r5r/index.html).
 :::
